--- a/settings.html
+++ b/settings.html
@@ -33,7 +33,7 @@
             <a href="categories.html" class="nav-link ">Categories</a>
           </li>
           <li class="nav-item px-2">
-            <a href="users.html" class="nav-link ">User</a>
+            <a href="users.html" class="nav-link ">Users</a>
           </li>
         </ul>
         <ul class="navbar-nav ml-auto">
@@ -64,7 +64,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <h1>Post One</h1>
+          <h1><i class="fas fa-cog"></i>Setting</h1>
         </div>
       </div>
     </div>
@@ -86,52 +86,48 @@
               Save Changes
             </a>
           </div>
-          <div class="col-md-3">
-              <a href="index.html" class="btn btn-info btn-block">
-                <i class="fas fa-trash"></i> 
-                Delete Post
-              </a>
-            </div>
       </div>
     </div>
   </section>
 
- <!-- DETAILS -->
- <section id="details">
+ <!-- SETTINGS -->
+ <section id="settings">
    <div class="container">
      <div class="row">
        <div class="col">
           <div class="card">
             <div class="card-header">
-                <h4> Edit Post </h4>
+                <h4> Edit Settings </h4>
             </div> 
             <div class="card-body">
                 <form>
-                    <div class="form-group">
-                        <label for="" class="title">Title</label>
-                        <input type="text" class="form-control" value="Post One">
-                      </div>
-                      <div class="form-group">
-                        <label for="category">Category</label>
-                        <select name="" id="" class="form-control">
-                          <option value="" selected>Developer</option>
-                          <option value="">Tech Gadget</option>
-                          <option value="">Business</option>
-                          <option value="">Health & Wellness</option>
-                        </select>
-                      </div>
-                      <div class="form-group">
-                        <label for="image">Upload Image</label>
-                        <div class="custom-file">
-                          <input type="file" class="custom-file-input" id="image">
-                         <label for="image" class="custom file-label">Choose File</label>
-                        </div>
-                        <small class="form-text text-muted"> Max Size 3mb</small>
-                      </div>
-                      <div class="form-group">
-                        <label for="body">Body</label>
-                        <textarea name="editor1" class="form-control">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet molestias veritatis, aliquam non eligendi nisi corrupti doloribus, placeat necessitatibus modi magni nulla optio ad cupiditate dolores, laborum perferendis provident! Neque nisi quisquam dignissimos nobis debitis error quo iure saepe mollitia officiis modi harum voluptates, unde minus voluptate repellendus, eligendi ipsam.</textarea>
-                      </div>
+                    
+                        <fieldset class="form-group">
+                                <legend>Allow User Registration</legend>
+                                <div class="form-check">
+                                    <label for="" class="form-check-label">
+                                        <input type="text" class="form-check input" value="Yes" checked> Yes
+                                    </label>
+                                 </div>
+                                 <div class="form-check">
+                                         <label for="" class="form-check-label">
+                                             <input type="text" class="form-check input" value="No" checked> No
+                                         </label>
+                                      </div>
+                                 </fieldset>
+                                 <fieldset class="form-group">
+                                        <legend>Allow User Registration</legend>
+                                        <div class="form-check">
+                                            <label for="" class="form-check-label">
+                                                <input type="text" class="form-check input" value="posts" checked> Blog Page
+                                            </label>
+                                         </div>
+                                         <div class="form-check">
+                                                 <label for="" class="form-check-label">
+                                                     <input type="text" class="form-check input" value="page" checked> homepage
+                                                 </label>
+                                              </div>
+                                         </fieldset>
                 </form>
             </div> 
           </div>
